--- a/error.html
+++ b/error.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Error - John's Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Error - Julien's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Header section -->
-  <header>
-    <h1>John's Portfolio</h1>
-    <nav>
-      <!-- Add navigation links here if needed -->
-    </nav>
-  </header>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- Error section -->
-  <section id="error">
-    <h2>Error</h2>
-    <div class="error-message">
-      <h3>Oops! Something went wrong.</h3>
-      <p>We apologize for the inconvenience. The page you are looking for cannot be found or is currently unavailable.</p>
-      <a href="index.html">Go back to the homepage</a>
-    </div>
-  </section>
+    <section class="error-section">
+        <h1>Oops! Something Went Wrong</h1>
+        <p>We apologize for the inconvenience. An error occurred while processing your request.</p>
+        <p>Please try again later or return to the <a href="index.html">home page</a>.</p>
+    </section>
 
-  <!-- Add more sections as needed (e.g., About, Contact, etc.) -->
-
-  <script src="app.js"></script>
+    <footer>
+        <p>&copy; 2023 Julien's Portfolio</p>
+    </footer>
 </body>
 </html>
+
+
